--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -308,7 +308,7 @@
   <h3 id='itemsCategoriesAnchor' class='mb-3 p-2 pl-3 section-title'>{{ 'Resources categories'|trans }}</h3>
   <div class='pl-3' id='itemsCategoriesDiv'>
     <div {{ App.Request.query.has('templateid') ? 'hidden' }}>
-      <div class='d-flex justify-content-between'>
+      <div class='d-flex justify-content-between mb-2'>
         <p class='col-form-label'>{{ 'This menu allows you to define categories for your resources. A resource category is similar to an experiment template but for resources entries.'|trans }}</p>
         {# CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports #}
         <div>
@@ -321,10 +321,12 @@
     <a href='?tab=4' class='btn hl-hover-gray'>
       <i class='fas fa-chevron-left mr-1 fa-fw'></i>{{ 'Back to listing'|trans }}
     </a>
+
   {% else %}
-    <ul class='list-group form-group sortable' data-axis='y' data-table='items_types'>
+
+    <ul class='list-group form-group sortable mb-2' data-axis='y' data-table='items_types'>
       {% for itemType in itemsCategoryArr %}
-        <li class='box' id='itemstypes_{{ itemType.id }}' style='color: #{{ itemType.color }}'><span class='sortableHandle draggable mr-2'><i class='fas fa-grip-vertical fa-fw'></i></span><a href='?tab=4&amp;templateid={{ itemType.id }}#itemsCategoriesAnchor' aria-label='{{ 'Edit'|trans }} {{ itemType.title|e('html_attr') }}' title='{{ 'Edit'|trans }}' class='p-2 mr-2 rounded hl-hover-gray'><i class='fas fa-pencil-alt'></i></a>{{ itemType.title }}</li>
+      <li class='list-group-item' id='itemstypes_{{ itemType.id }}'><div class='d-flex'><span class='sortableHandle draggable p-2 mr-2'><i class='fas fa-grip-vertical'></i></span><a href='?tab=4&amp;templateid={{ itemType.id }}#itemsCategoriesAnchor' aria-label='{{ 'Edit'|trans }} {{ itemType.title|e('html_attr') }}' title='{{ 'Edit'|trans }}' class='p-2 mx-2 rounded hl-hover-gray'><i class='fas fa-pencil-alt'></i></a><span class='p-2' style='color: #{{ itemType.color }}'>{{ itemType.title }}</span><span class='user-badge ml-auto'>{{ itemType.team_name }}</span></div></li>
       {% endfor %}
     </ul>
     {% if itemsCategoryArr %}
@@ -374,6 +376,11 @@
         {% endif %}
       </div>
 
+      <div class='d-flex my-2 align-items-center'>
+        <div class='edit-mode-label'>
+          <i aria-hidden='true' class='fas fa-fw fa-users mr-1'></i>{{ 'Team'|trans }}<span class='ml-2'>{{ Entity.entityData.team_name }}</span>
+        </div>
+      </div>
       <ul class='list-inline'>
         <li class='list-inline-item'>
           <label for='itemsTypesName'>{{ 'Name'|trans }}</label>
