bug/minor: pdf: fix comment creation date not appearing
it was referencing the old datetime column name instead of created_at

fix #5223

--- a/src/templates/pdf.html
+++ b/src/templates/pdf.html
@@ -125,7 +125,7 @@
       {% endtrans %}
     </h3>
     {% for comment in entityData.comments %}
-      <p class='pdf-ul'>On {{ comment.datetime }} {{ comment.fullname }} wrote:<br>{{ comment.comment|nl2br }}</p>
+      <p class='pdf-ul'>On {{ comment.created_at }} {{ comment.fullname }} wrote:<br>{{ comment.comment|nl2br }}</p>
     {% endfor %}
   </section>
 {% endif %}
