--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -336,6 +336,14 @@
 
     {# templateData will be loaded with content from an item type if templateid is present is url #}
     {% if Entity.entityData %}
+      {# tinymce or markdown? #}
+      {% set editor = 'tiny' %}
+      {% if Entity.Users.userData.use_markdown or App.Request.query.get('editor') == 'md' or Entity.entityData.content_type == '2' %}
+        {% set editor = 'md' %}
+      {% endif %}
+      {% if App.Request.query.get('editor') == 'tiny' or Entity.entityData.content_type == '1' %}
+        {% set editor = 'tiny' %}
+      {% endif %}
       <div class='float-right'>
         {% set lockIcon = 'fa-lock-open' %}
         {% set alt = 'Enable/Disable exclusive edit mode'|trans %}
@@ -415,7 +423,15 @@
       <hr>
 
       <div>
-        <textarea class='mceditable' id='itemsTypesBody'>{{ Entity.entityData.body }}</textarea>
+        {% if editor == 'md' %}
+          <textarea aria-label='{{ 'Main content'|trans }}' id='body_area' class='markdown-textarea' data-language='{{ App.getJsLang }}' name='body'>{{ Entity.entityData.body }}</textarea>
+        {% else %}
+          <textarea class='mceditable' id='itemsTypesBody'>{{ Entity.entityData.body }}</textarea>
+        {% endif %}
+        {# SWITCH EDITOR the data-editor is here to indicate which is the current editor #}
+        <div class='float-right'>
+          <button type='button' class='btn btn-sm hl-hover-gray p-1 mt-1 rounded' id='iHazEditor' data-action='switch-editor' data-editor='{{ editor }}'><i class='fas fa-pencil-alt fa-fw'></i> {{ 'Switch editor'|trans }}</button>
+        </div>
         <div class='text-center mt-3'>
           <button type='button' class='btn btn-primary' data-id='{{ Entity.id }}' data-action='itemstypes-update'>{{ 'Save'|trans }}</button>
         </div>
