--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -115,6 +115,10 @@
           <textarea aria-label='{{ 'Main content'|trans }}' id='body_area' class='mceditable invisible' name='body'>{{ Entity.entityData.body }}</textarea>
         {% endif %}
       </div>
+      {# SWITCH EDITOR the data-editor is here to indicate which is the current editor #}
+      <div class='float-right'>
+        <button type='button' class='btn btn-sm hl-hover-gray p-1 mt-1 rounded' id='iHazEditor' data-action='switch-editor' data-editor='{{ editor }}'><i class='fas fa-pencil-alt fa-fw'></i> {{ 'Switch editor'|trans }}</button>
+      </div>
 
       <div class='mt-4 text-center'>
         <button type='button' {{ not displayMainText ? 'hidden' }} data-action='update-entity-body' class='btn btn-primary'>{{ 'Save'|trans }}</button>
