--- a/src/templates/view-edit-template.html
+++ b/src/templates/view-edit-template.html
@@ -143,10 +143,6 @@
     </button>
 
     <div class='dropdown-menu dropdown-menu-right'>
-      {% if mode == 'edit' %}
-        {# SWITCH EDITOR the data-editor is here to indicate which is the current editor #}
-        <button class='dropdown-item' type='button' id='iHazEditor' data-action='switch-editor' data-editor='{{ editor }}'><i class='fas fa-pencil-alt fa-fw'></i> {{ 'Switch editor'|trans }}</button>
-      {% endif %}
       {# REVISIONS #}
       <a class='dropdown-item' href='revisions.php?type={{ Entity.entityType.value }}&amp;item_id={{ Entity.id }}'><i class='fas fa-history fa-fw'></i> {{ 'See revisions'|trans }}</a>
       {# CHANGELOG #}
@@ -216,6 +212,10 @@
           <textarea id='e{{ Entity.entityData.id }}' class='mceditable'>{{ Entity.entityData.body }}</textarea>
         </div>
       {% endif %}
+      {# SWITCH EDITOR the data-editor is here to indicate which is the current editor #}
+      <div class='float-right'>
+        <button type='button' class='btn btn-sm hl-hover-gray p-1 mt-1 rounded' id='iHazEditor' data-action='switch-editor' data-editor='{{ editor }}'><i class='fas fa-pencil-alt fa-fw'></i> {{ 'Switch editor'|trans }}</button>
+      </div>
       <div class='text-center mt-4'>
         <button type='button' data-action='update-template' class='btn btn-primary'>{{ 'Save'|trans }}</button>
       </div>
