--- a/src/templates/view-edit.html
+++ b/src/templates/view-edit.html
@@ -8,6 +8,8 @@
 {% include('booking-params-modal.html') %}
 {# PROCUREMENT PARAMS #}
 {% include('procurement-params-modal.html') %}
+{# STORAGE MODAL #}
+{% include('storage-modal.html') %}
 
 <div id='isArchivedDiv'>
 {% if Entity.entityData.state == constant('Elabftw\\Enums\\State::Archived').value %}
