--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -52,6 +52,7 @@
   <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='12'>LDAP</button></li>
   <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='13'>{{ 'External auth'|trans }}</button></li>
   <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='14'>{{ 'Audit Logs'|trans }}</button></li>
+  <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='15'>{{ 'Storage'|trans }}</button></li>
 </ul>
 
 {# loading spinner #}
@@ -1075,6 +1076,45 @@
         {% endfor %}
       </tbody>
     </table>
+  </div>
+</div>
+
+<div data-tabcontent='15' hidden>
+  <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Storage'|trans }}</h3>
+  <a href='#' data-action='expand-all-storage'>{{ 'Expand all'|trans }}</a>
+  <div class='pl-3 mb-5' id='storageDiv'>
+    {% macro render_items(items, groupedItems) %}
+    <ul class='list-group'>
+        {% for item in items %}
+            <li class='list-group-item py-2'>
+              <details>
+                <summary><span class='user-badge'>{{ item.level_name }}</span> {{ item.unit_name }}{{ item.parent_id }}</summary>
+                {% if groupedItems[item.id] is defined %}
+                        {# Recursively render the children #}
+                        {{ _self.render_items(groupedItems[item.id], groupedItems) }}
+                {% endif %}
+            <div>
+              <button type='button' class='btn btn-secondary btn-sm' data-parent-id='{{ item.id }}' data-action='add-storage-children'><i class='fas fa-plus-circle mr-1 color-white'></i>{{ 'Add children to %s'|trans|format(item.unit_name) }}</button>
+            </div>
+              </details>
+            </li>
+            {#
+            <button type='button' class='btn btn-primary' data-level-name='{{ item.level_name }}' data-parent-id='{{ item.parent_id }}' data-action='add-storage'>{{ 'Add %s'|trans|format(item.level_name) }}</button>
+            {% if loop.last %}
+            <div>
+            <button type='button' class='btn btn-primary' data-level-name='{{ item.level_name }}' data-parent-id='{{ item.parent_id }}' data-action='add-storage'>{{ 'Add %s'|trans|format(item.level_name) }}</button>
+            </div>
+            {% endif %}
+            #}
+        {% endfor %}
+    </ul>
+  {% endmacro %}
+  {# Start rendering from the root level, which has parent_id = null #}
+  {{ _self.render_items(storageUnitsArr[null], storageUnitsArr) }}
+  <div>
+    <button type='button' class='btn btn-secondary btn-sm' data-parent-id='' data-action='add-storage-children'><i class='fas fa-plus-circle mr-1 color-white'></i>{{ 'Add root element'|trans }}</button>
+  </div>
+
   </div>
 </div>
 
