more storage stuff

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -90,6 +90,7 @@
   {% include('edit-tags.html') %}
   {# PERMISSIONS #}
   <hr>
+  {% include 'storage-view-edit.html' %}
   {% include('edit-permissions.html') %}
 
   {# BODY #}
