--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -1083,7 +1083,7 @@
 <div data-tabcontent='15' hidden>
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Storage'|trans }}</h3>
   <div class='pl-3 mb-5'>
-    <div><button class='btn btn-primary' data-action='get-storage-csv'>{{ 'Generate report'|trans }}</button></div>
+    <div><button class='btn btn-secondary' data-action='get-storage-csv'>{{ 'Generate report'|trans }}</button></div>
     {% include 'storage-list.html' with {'storage_editable': true} %}
 </div>
 
