--- a/src/templates/duplicate-modal.html
+++ b/src/templates/duplicate-modal.html
@@ -17,6 +17,13 @@
             <span class='slider'></span>
           </label>
         </div>
+        <div class='d-flex justify-content-between'>
+          <label for='duplicateLinkToPrevious' class='col-form-label'>{{ 'Link to original experiment'|trans }}</label>
+          <label class='switch ucp-align'>
+            <input type='checkbox' autocomplete='off' id='duplicateLinkToPrevious' checked>
+            <span class='slider'></span>
+          </label>
+        </div>
       </div>
       <div class='modal-footer'>
         <button type='button' class='btn btn-ghost' data-dismiss='modal'>{{ 'Cancel'|trans }}</button>
