feat/minor: experiments: rename previous resource as original

--- a/src/templates/duplicate-modal.html
+++ b/src/templates/duplicate-modal.html
@@ -18,9 +18,9 @@
           </label>
         </div>
         <div class='d-flex justify-content-between'>
-          <label for='duplicateLinkToPrevious' class='col-form-label'>{{ 'Link to original experiment'|trans }}</label>
+          <label for='duplicateLinkToOriginal' class='col-form-label'>{{ 'Link to original experiment'|trans }}</label>
           <label class='switch ucp-align'>
-            <input type='checkbox' autocomplete='off' id='duplicateLinkToPrevious' checked>
+            <input type='checkbox' autocomplete='off' id='duplicateLinkToOriginal' checked>
             <span class='slider'></span>
           </label>
         </div>
