--- a/src/templates/duplicate-modal.html
+++ b/src/templates/duplicate-modal.html
@@ -20,9 +20,7 @@
 
       {% if Entity.entityType.value == 'experiments' or Entity.entityType.value == 'items' %}
         <div class='d-flex justify-content-between'>
-          <label for='duplicateLinkToOriginal' class='col-form-label'>
-            {{ 'Link to original ' ~ (Entity.entityType.value == 'experiments' ? 'experiment' : 'item')|trans }}
-          </label>
+          <label for='duplicateLinkToOriginal' class='col-form-label'>{{ 'Link to original entry'|trans }}</label>
           <label class='switch ucp-align'>
             <input type='checkbox' autocomplete='off' id='duplicateLinkToOriginal' checked>
             <span class='slider'></span>
