bug/minor: scheduler: use correct id for link in view mode
When a resource is booked, or an experiment or resource is linked to a
booked slot in the scheduler, the future booked slots are presented in
view mode. This change fixes the incorrect value of itemid query
parameter on these buttons.

--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -93,8 +93,9 @@
   {% if Entity.entityData.events_start %}
     <div class='mb-2'>
       <i class='far fa-fw fa-calendar-alt'></i>
+      {% set splitItemids = Entity.entityData.events_start_itemid|split('|') %}
       {% for event in Entity.entityData.events_start|split('|') %}
-        <a href='team.php?item={{ Entity.id }}&amp;start={{ event|url_encode }}' class='mx-1 btn btn-neutral relative-moment'  title='{{ event|date('Y-m-d H:i:s') }}' aria-label='{{ event|date('Y-m-d H:i:s') }}'></a>
+        <a href='team.php?item={{ splitItemids[loop.index - 1] }}&amp;start={{ event|url_encode }}' class='mx-1 btn btn-neutral relative-moment'  title='{{ event|date('Y-m-d H:i:s') }}' aria-label='{{ event|date('Y-m-d H:i:s') }}'></a>
       {% endfor %}
     </div>
     <hr>
