--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -74,7 +74,7 @@
               </a>
               <div class='dropdown-menu'>
                 <a class='dropdown-item' href='chem-editor.php'>{{ 'Chemical Structure Editor'|trans }}</a>
-                <a class='dropdown-item disabled' href='#'>{{ 'DNA Cloning'|trans }}</a>
+                <a class='dropdown-item' href='syc.php'>{{ 'DNA Cloning'|trans }}</a>
             </li>
 
 
