--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -37,6 +37,7 @@
 {% include 'create-statuslike-modal.html' with {'target': 'experiments_categories', 'title': 'Create new experiments category'|trans} %}
 {% include 'create-statuslike-modal.html' with {'target': 'experiments_status', 'title': 'Create new experiments status'|trans} %}
 {% include 'create-statuslike-modal.html' with {'target': 'items_status', 'title': 'Create new resources status'|trans} %}
+{% include('ownership-transfer-modal.html') %}
 {% include 'onboarding-email-modal.html' %}
 
 {# set variables for binary-settings template and other inputs with a data-model #}
@@ -778,28 +779,9 @@
     {# Action buttons #}
     <button data-action='run-action-selected' data-what='forceLock' type='button' class='btn btn-primary mr-1 mb-2'>{{ 'Lock'|trans }}</button>
     <button data-action='run-action-selected' data-what='forceUnlock' type='button' class='btn btn-primary mr-1 mb-2'>{{ 'Unlock'|trans }}</button>
+    <button data-action='toggle-modal' type='button' class='btn btn-primary mr-1 mb-2' data-target='ownerModal'>{{ 'Transfer ownership'|trans }}</button>
     <button data-action='run-action-selected' data-what='archive' type='button' class='btn btn-secondary mr-1 mb-2'>{{ 'Archive'|trans }}</button>
     <button data-action='run-action-selected' data-what='destroy' type='button' class='btn btn-danger mr-1 mb-2'>{{ 'Delete'|trans }}</button>
-  </div>
-
-   {# Transfer ownership #}
-  <div class='row'>
-    <div class='col-md-6 mb-3'>
-      <div>
-        {# SELECT USER #}
-        <label for='newOwner'>{{ 'New owner'|trans }}</label>
-        <select id='newOwner' class='form-control'>
-          {% for user in Entity.Users.readAllFromTeam %}
-          <option value='{{ user.userid }}'
-            {{ Entity.entityData.userid == user.userid ? ' selected' }}
-            >{{ user.fullname }}
-          </option>
-          {% endfor %}
-        </select>
-        <button data-action='run-action-selected' data-what='transferOwnership' type='button' class='btn btn-primary mt-3 mx-0'>{{ 'Transfer ownership'|trans }}</button>
-
-      </div>
-    </div>
   </div>
 
   <h4>{{ 'Set permissions'|trans }}</h4>
