--- a/src/templates/ownership-transfer-modal.html
+++ b/src/templates/ownership-transfer-modal.html
@@ -21,7 +21,11 @@
       </div>
       <div class='modal-footer'>
         <button type='button' class='btn btn-secondary' data-dismiss='modal'>{{ 'Close'|trans }}</button>
-        <button type='button' class='btn btn-primary' data-action='transfer-ownership'>{{ 'Save'|trans }}</button>
+        {% if App.Request.getScriptName|split('/')|last == 'admin.php' %}
+          <button type='button' class='btn btn-primary' data-action='run-action-selected' data-what='transferownership'>{{ 'Transfer ownership'|trans }}</button>
+        {% else %}
+          <button type='button' class='btn btn-primary' data-action='transfer-ownership'>{{ 'Save'|trans }}</button>
+        {% endif %}
       </div>
     </div>
   </div>
