--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -94,6 +94,7 @@
   <h3 class='p-2 pl-3 section-title'>{{ 'Permissions'|trans }}</h3>
 
   <div class='pl-3 mt-2'>
+    {{ 'This feature is deprecated and will be removed in the next version. Use templates permissions instead.'|msg('warning', false) }}
 
     {% include 'binary-setting.html' with {'model': model, 'src': src,
       'slug': 'do_force_canread',
