--- a/src/templates/pdf.html
+++ b/src/templates/pdf.html
@@ -44,7 +44,7 @@
 
   {% if timestamped %}
   <div class="timestamped-block">
-    <p>{{ 'This document has been timestamped'|trans }} by {{ timestamperName }} on {{ localDate }}.</p>
+    <p>{{ 'This document has been timestamped by %s on %s.'|trans|format(timestamperName, localDate) }}</p>
   </div>
   {% endif %}
 
@@ -148,10 +148,14 @@
           <p class='elabid'>{{ 'Unique eLabID:'|trans }} {{ entityData.elabid }}</p>
         {% endif %}
         {% if locked %}
-          <p class='elabid'>Locked by {{ lockerName }} on {{ lockDate }}</p>
+          <p class='elabid'>
+            {{ 'Locked by %s on %s at %s'|trans|format(lockerName, lockDate, lockTime) }}
+          </p>
         {% endif %}
         {% if timestamped %}
-          <p class='elabid'>Timestamped by {{ timestamperName }} on {{ timestampedAt }}</p>
+          <p class='elabid'>
+            {{ 'Timestamped by %s on %s at %s'|trans|format(timestamperName, timestampDate, timestampTime) }}
+          </p>
         {% endif %}
         <p class='elabid'>Link: <a href='{{ url }}'>{{ url }}</a></p>
         {% if classification != 'None' %}
