feat/medium: batch action ownership

--- a/src/templates/ownership-transfer-modal.html
+++ b/src/templates/ownership-transfer-modal.html
@@ -10,8 +10,8 @@
       </div>
       <div class='modal-body'>
         {# SELECT USER #}
-        <label for='new_owner'>{{ 'New owner'|trans }}</label>
-        <select id='new_owner' class='form-control'>
+        <label for='target_owner'>{{ 'New owner'|trans }}</label>
+        <select id='target_owner' class='form-control'>
           {% for user in Entity.Users.readAllFromTeam %}
             <option value='{{ user.userid }}'
             {{ Entity.entityData.userid == user.userid ? ' selected' }}
