--- a/src/templates/syc.html
+++ b/src/templates/syc.html
@@ -2,6 +2,6 @@
 {% block body %}
 Here be syc
 <div id='syc-root' class='my-2'>
-  <iframe src='/syc' sandbox='allow-scripts' width='800' height='600'></iframe>
+  <iframe src='/syc/' sandbox='allow-scripts allow-same-origin allow-forms allow-downloads' width='100%' height='800'></iframe>
 </div>
 {% endblock body %}
