--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -1085,6 +1085,7 @@
   <div class='pl-3 mb-5'>
     <div><button class='btn btn-secondary' data-action='get-storage-csv'>{{ 'Generate report'|trans }}</button></div>
     {% include 'storage-list.html' with {'storage_editable': true} %}
+  </div>
 </div>
 
 <div id='info' data-page='sysconfig'></div>
