--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -402,6 +402,9 @@ button:disabled {
 }
 
 .table {
+  width: auto;
+  table-layout: auto;
+
   thead {
     position: sticky;
     top: 0;
@@ -420,6 +423,11 @@ button:disabled {
     &.bgnd-transparent {
       background-color: $mainbackground;
     }
+  }
+
+  td {
+    width: 100%;
+    height: 100%;
   }
 
   th {
