--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -403,7 +403,7 @@ button:disabled {
 
 .table {
   width: auto;
-  table-layout: auto;
+  table-layout: fixed;
 
   thead {
     position: sticky;
@@ -426,8 +426,12 @@ button:disabled {
   }
 
   td {
-    width: 100%;
-    height: 100%;
+    width: fit-content;
+    height: auto;
+
+    img {
+      object-fit: contain;
+    }
   }
 
   th {
