--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -150,7 +150,7 @@
         <div>
           <input id='importFileInput' style="display: none;" required name='file' type='file' accept='.eln,vnd.eln+zip,.csv,text/csv' />
           <div class='mb-4 d-flex flex-row'>
-            <button type='button' class='btn btn-primary' data-action='import-file-input' >{{ 'Import from file'|trans }}</button>
+            <button type='button' class='btn btn-primary' data-action='show-file-input' >{{ 'Import from file'|trans }}</button>
           </div>
           <div class="mb-4" id="attachedFile" hidden>
             {{ 'Attached file'|trans }} :
