--- a/src/templates/chem-editor.html
+++ b/src/templates/chem-editor.html
@@ -2,6 +2,8 @@
 {% block body %}
 <div id='ketcher-root' class='my-2'></div>
 <div id='ketcher-actions'>
-  <button type='button' class='btn btn-primary' data-action='search-from-editor'>{{ 'Search molecule'|trans }}</button>
+  <button type='button' class='btn btn-primary' data-action='search-from-editor'>{{ 'Search compound'|trans }}</button>
+  <button type='button' class='btn btn-primary' data-action='create-item-from-editor'>{{ 'Create resource from compound'|trans }}</button>
+  <button type='button' class='btn btn-primary' data-action='create-experiment-from-editor'>{{ 'Create experiment from compound'|trans }}</button>
 </div>
 {% endblock body %}
