--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -73,6 +73,7 @@
               {{ 'Tools'|trans }}
               </a>
               <div class='dropdown-menu'>
+                <a class='dropdown-item' href='compounds.php'>{{ 'Compounds'|trans }}</a>
                 <a class='dropdown-item' href='chem-editor.php'>{{ 'Chemical Structure Editor'|trans }}</a>
                 <a class='dropdown-item' href='syc.php'>{{ 'DNA Cloning'|trans }}</a>
             </li>
