--- a/src/templates/view-edit.html
+++ b/src/templates/view-edit.html
@@ -6,6 +6,8 @@
 
 {# BOOKING PARAMS #}
 {% include('booking-params-modal.html') %}
+{# IMPORT FROM PUBCHEM #}
+{% include('import-pubchem-modal.html') %}
 {# PROCUREMENT PARAMS #}
 {% include('procurement-params-modal.html') %}
 {# STORAGE MODAL #}
