quotes and fix tests

--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -152,9 +152,9 @@
           <div class='mb-4 d-flex flex-row'>
             <button type='button' class='btn btn-primary' data-action='show-file-input' >{{ 'Import from file'|trans }}</button>
           </div>
-          <div class="mb-4" id="attachedFile" hidden>
+          <div class='mb-4' id='attachedFile' hidden>
             {{ 'Attached file'|trans }} :
-            <span id="fileName" class="font-weight-bold"></span>
+            <span id='fileName' class='font-weight-bold'></span>
           </div>
           <p class='smallgray'>{{ 'Allowed extensions: .eln, .csv'|trans }}<br>
           {{ 'Maximum size: %s'|format(maxUploadSizeRaw)|trans }}</p>
